# noahshiira-econ481-project

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  project.ipynb  pyproject.toml
.github/workflows/: run-notebook.yml
auxiliary/: __init__.py  plots.py  predictions.py  tables.py
files/: cml_evaluation.py  cml_training.py  simulate_data.py
files/replication_code/: cml_training.py
tests/: __init__.py  test_imports.py
